# apple-notes-to-sqlite

./: .gitignore  README.md  pyproject.toml
apple_notes_to_sqlite/: cli.py
tests/: test_apple_notes_to_sqlite.py
